--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
         - name: restapi
-          image: app:latest # Image that will be used inside the container in the cluster
+          image: restapi:latest # Image that will be used inside the container in the cluster
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
